--- a/client/views/sponsors/sponsorshipDetails.html
+++ b/client/views/sponsors/sponsorshipDetails.html
@@ -1,19 +1,19 @@
 <template name="sponsorshipDetails">
-    <h1>Why sponsor a SpeedHack?</h1>
+    <h1>Sponsor SpeedHack</h1>
 
-    <ul>
-        <li>Expose your technology to talented developers</li>
-        <li>Get feedback on your technology</li>
-        <li>Usage of your technology guaranteed (thanks to challenges)</li>
-        <li>Meet developers in person</li>
-        <li>International events with growing brand recognition</li>
-    </ul>
     <p>
-        Trusted already by many partners
+        The Speedhack is a different type of hackathon where participants have to solve a limited number of challenges (usually between 6 and 9) in a period of three hours of time. It is usually held at the same time as the API Strategy & Practice Conference, giving attendees of the conference the chance to participate in the hackathon as well.
+    </p><p>
+        The challenges are created by the sponsors of the Speedhack - we’ll help you prepare the right challenge, don’t worry - and they have to be solvable in 15 minutes.
+    </p><p>
+        Below’s a list of past sponsors and supporters, as well as a list of questions and answers to know what to expect and how to prepare for the Speedhack.
     </p>
-    
+
+    <h2>Past sponsors</h2>
     ***REMOVED******REMOVED***>partnersLogo***REMOVED******REMOVED***
 
+    <h2>Sponsor Faq</h2>
+    ***REMOVED******REMOVED***> sponsorsFaq***REMOVED******REMOVED***
     <p>
         If you are interested to sponsor a SpeedHack, shoot us an email.
     </p>
@@ -21,4 +21,53 @@
     <script>
     (function()***REMOVED***var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id))***REMOVED***js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)***REMOVED***id=id+'_';if(!gi.call(d,id))***REMOVED***qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)***REMOVED******REMOVED***)()
     </script>
+</template>
+
+<template name="sponsorsFaq">
+    <h3>What type of exposure will I get?</h3>
+        <b>Pre-Speedhack:</b>
+    <p>
+        Participants won’t have access to the challenges until the actual day of the Speedhack, but since they’ll be required to form teams and get familiar with all the APIs participating before the event, you’ll get some exposure pre-Speedhack
+    </p><p>
+    You will also have the chance to share your cool API stories in the Developer Track at the API Strategy & Practice Conference.
+    </p>
+    <b>At the Speedhack:</b>
+    <p>
+        The day of the event, you’ll get the chance to interact with developers directly both answering their questions and evaluating the challenges of each team face to face with them.
+    </p>
+
+    <h3>Does my company have to be there physically?</h3>
+    <p>Yes, we require at least one developer evangelist of each API provider presenting a challenge to be there to help with any questions that the participants may have. The organization will provide a table for you to be there with your laptop and feel free to bring any swag.</p>
+
+    <h3>How many teams will be participating?</h3>
+    <p>
+    Between 10 and 15 teams of 1-2 people each.</p>
+
+    <h3>Who can participate creating a challenge?</h3>
+    <p>There’s a limited number of spots (6-9). Any API provider with a public API or SDK can participate and challenge the crowd!</p>
+
+    <h3>What are some suggestions to prepare a good challenge?</h3>
+    <ol>
+        <li>Provide a short narrative description about what needs to be achieved. Ideally the outcome of the challenge is binary (either pass or fail), which will make assessment easier. AND if pass, there should be different pass qualities.</li>
+        <li>Please make sure that the challenge can be completed within 15 minutes by a team of experienced developers (of max 2 members).</li>
+        <li>Please make sure that the API works and is accessible.</li>
+        <li>Provide API documentation or a reference to an accessible web portal.</li>
+        <li>Provide access to the API (provision of API keys, dummy accounts, or request for developers to sign up).</li>
+        <li>Provide sample code (optional but highly recommended).</li>
+    </ol>
+
+    <h3>Is there a challenge example that I can take a look at?</h3>
+    <b>API challenge</b>
+    <p>
+        <i>Send a SMS to number +1888 888 88 and answers it with a random quote from iheartquotes.com. Pass if text received. extra points for coding the whole solution and not using the console.</i>
+    </p>
+    <b>SDK challenge</b>
+    <p>
+        <i>Create a HelloWorld application using the SDK. Pass if HelloWorld completed.</i>
+    </p>
+
+    <h3>I want to participate, how much does it cost?</h3>
+    <p>
+        We have two different levels of exposure depending on what you’re looking for. Email us at contact@apistrat.com for more information.
+    </p>
 </template>
