add details to sponsor page

--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -44,6 +44,9 @@
         <a href="#partners">Partners</a>
     </li>
     <li class="page-scroll">
+        <a href="{{pathFor route='sponsorshipDetails'}}">Sponsorship</a>
+    </li>
+    <li class="page-scroll">
         <a href="#faq">FAQ</a>
     </li>
     <li class="page-scroll">
