--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -35,22 +35,22 @@
 
 <template name="navMenu">
     <li class="page-scroll">
-        <a href="#portfolio">Where</a>
+        <a href="{{pathFor route='home'}}#portfolio">Where</a>
     </li>
     <li class="page-scroll">
-        <a href="#about">About</a>
+        <a href="{{pathFor route='home'}}#about">About</a>
     </li>
     <li class="page-scroll">
-        <a href="#partners">Partners</a>
+        <a href="{{pathFor route='home'}}#partners">Partners</a>
     </li>
     <li class="page-scroll">
         <a href="{{pathFor route='sponsorshipDetails'}}">Sponsorship</a>
     </li>
     <li class="page-scroll">
-        <a href="#faq">FAQ</a>
+        <a href="{{pathFor route='home'}}#faq">FAQ</a>
     </li>
     <li class="page-scroll">
-        <a href="#contact">Contact</a>
+        <a href="{{pathFor route='home'}}#contact">Contact</a>
     </li>
 </template>
 
