--- a/client/views/events/events.edit.html
+++ b/client/views/events/events.edit.html
@@ -9,6 +9,7 @@
        {{> afQuickField name='venue'}}
        {{> afFormGroup name='startDate' type="datetime-local"}}
        {{> afFormGroup name='endDate' type="datetime-local"}}
+       {{> afQuickField name='eventbrite_id'}}
      </fieldset>
      <button type="submit" class="btn btn-primary">Update</button>
  {{/autoForm}}
