--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -35,22 +35,22 @@
 
 <template name="navMenu">
     <li class="page-scroll">
-        <a href="#portfolio">Where</a>
+        <a href="***REMOVED******REMOVED***pathFor route='home'***REMOVED******REMOVED***#portfolio">Where</a>
     </li>
     <li class="page-scroll">
-        <a href="#about">About</a>
+        <a href="***REMOVED******REMOVED***pathFor route='home'***REMOVED******REMOVED***#about">About</a>
     </li>
     <li class="page-scroll">
-        <a href="#partners">Partners</a>
+        <a href="***REMOVED******REMOVED***pathFor route='home'***REMOVED******REMOVED***#partners">Partners</a>
     </li>
     <li class="page-scroll">
         <a href="***REMOVED******REMOVED***pathFor route='sponsorshipDetails'***REMOVED******REMOVED***">Sponsorship</a>
     </li>
     <li class="page-scroll">
-        <a href="#faq">FAQ</a>
+        <a href="***REMOVED******REMOVED***pathFor route='home'***REMOVED******REMOVED***#faq">FAQ</a>
     </li>
     <li class="page-scroll">
-        <a href="#contact">Contact</a>
+        <a href="***REMOVED******REMOVED***pathFor route='home'***REMOVED******REMOVED***#contact">Contact</a>
     </li>
 </template>
 
