--- a/client/views/events/events.edit.html
+++ b/client/views/events/events.edit.html
@@ -9,6 +9,7 @@
        ***REMOVED******REMOVED***> afQuickField name='venue'***REMOVED******REMOVED***
        ***REMOVED******REMOVED***> afFormGroup name='startDate' type="datetime-local"***REMOVED******REMOVED***
        ***REMOVED******REMOVED***> afFormGroup name='endDate' type="datetime-local"***REMOVED******REMOVED***
+       ***REMOVED******REMOVED***> afQuickField name='eventbrite_id'***REMOVED******REMOVED***
      </fieldset>
      <button type="submit" class="btn btn-primary">Update</button>
  ***REMOVED******REMOVED***/autoForm***REMOVED******REMOVED***
