new view for event

--- a/client/views/events/events.show.html
+++ b/client/views/events/events.show.html
@@ -33,7 +33,7 @@
         <ul class="ul_sponsors">
          ***REMOVED******REMOVED***#each sponsors***REMOVED******REMOVED***
             <li>
-                <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo" width="100%"/></a>
+                <a href="***REMOVED******REMOVED***url***REMOVED******REMOVED***" target="_blank"><img src="***REMOVED******REMOVED***logo***REMOVED******REMOVED***" class="sponsor_logo" alt="***REMOVED******REMOVED***name***REMOVED******REMOVED*** sponsor logo"/></a>
             </li>
             ***REMOVED******REMOVED***#if isInRole 'admin'***REMOVED******REMOVED***
                ***REMOVED******REMOVED***> removeSponsorMenu***REMOVED******REMOVED***
